2014-11-20  Benjamin Poulain  <bpoulain@apple.com>

        Remove the remaining vestiges of minimal-ui
        https://bugs.webkit.org/show_bug.cgi?id=138890

        Reviewed by Sam Weinig.

        * WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:
        (WebKit::WebFrameLoaderClient::dispatchDidFinishDocumentLoad):
        * WebProcess/WebPage/WebPage.cpp:
        (WebKit::WebPage::didCommitLoad):
        (WebKit::WebPage::didFinishDocumentLoad): Deleted.
        * WebProcess/WebPage/WebPage.h:
        * WebProcess/WebPage/ios/WebPageIOS.mm:
        (WebKit::WebPage::savePageState):
        (WebKit::WebPage::restorePageState):
        (WebKit::WebPage::viewportConfigurationChanged):
        (WebKit::WebPage::updateViewportSizeForCSSViewportUnits):

2014-11-20  Beth Dakin  <bdakin@apple.com>

        Preview popover needs minimum and maximum sizes
        https://bugs.webkit.org/show_bug.cgi?id=138943
        -and corresponding-
        rdar://problem/18904651

        Reviewed by Tim Horton.

        Quick follow-up to get the right screen.
        * UIProcess/mac/WKActionMenuController.mm:
        (-[WKActionMenuController largestPopoverSize]):

2014-11-20  Beth Dakin  <bdakin@apple.com>

        Preview popover needs minimum and maximum sizes
        https://bugs.webkit.org/show_bug.cgi?id=138943
        -and corresponding-
        rdar://problem/18904651

        Reviewed by Tim Horton.

        This patch enforces minimum and maximum popover sizes. If the popover needs to be 
        sized up to be above the minimum, it will end up covering some of the 
        _hitTestResult, so we should compute a new origin rect based on the original 
        event location. 
        * UIProcess/mac/WKActionMenuController.h:
        * UIProcess/mac/WKActionMenuController.mm:
        (-[WKActionMenuController prepareForMenu:withEvent:]):
        (-[WKActionMenuController _previewURLFromActionMenu:]):
        (-[WKActionMenuController _createPreviewPopover]):