@@ -1,3 +1,14 @@
+2014-11-20  Dan Bernstein  <mitz@apple.com>
+
+        Build fix.
+
+        * UIProcess/ios/forms/WKAirPlayRoutePicker.mm:
+        (-[WKAirPlayRoutePicker showAirPlayPickerIPad:fromRect:]): Cast the return value of
+        [getMPAudioVideoRoutingPopoverControllerClass() alloc] to resolve ambiguity about which
+        -initWithType: we are calling.
+        (-[WKAirPlayRoutePicker showAirPlayPickerIPhone:]): Cast to resolve ambiguity.
+        (-[WKAirPlayRoutePicker show:fromRect:]): Cast for consistency.
+
 2014-11-20  Benjamin Poulain  <bpoulain@apple.com>
 
         Remove the remaining vestiges of minimal-ui
